feat: update display_order
